--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,13 @@
       <version>1.2.16</version>
       <scope>test</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.sap.cloud.adk/generic.api -->
+    <dependency>
+      <groupId>com.sap.cloud.adk</groupId>
+      <artifactId>generic.api</artifactId>
+      <version>3.12.0</version>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -64,7 +71,7 @@
         <extensions>true</extensions>
 
         <configuration>
-          <excludeDependencies>true</excludeDependencies>
+          <excludeDependencies>false</excludeDependencies>
         </configuration>
       </plugin>
       <plugin>
