--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,35 @@
       <artifactId>generic.api</artifactId>
       <version>3.12.0</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient-osgi</artifactId>
+      <version>[4.5,)</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
+      <version>[2.12,)</version> <!-- Use the latest version available -->
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>[2.12,)</version> <!-- Use the latest version available -->
+    </dependency>
+    <dependency>
+      <groupId>com.sap.it.public</groupId>
+      <artifactId>generic.api</artifactId>
+      <version>2.25.0</version>
+      <scope>system</scope>
+      <systemPath>${project.basedir}/src/main/resources/com.sap.it.public.generic.api-2.25.0.jar</systemPath>
+    </dependency>
+    <dependency>
+      <groupId>com.sap.it.public</groupId>
+      <artifactId>adapter.api</artifactId>
+      <version>2.25.0</version>
+      <scope>system</scope>
+      <systemPath>${project.basedir}/src/main/resources/com.sap.it.public.adapter.api-2.25.0.jar</systemPath>
+    </dependency>
   </dependencies>
 
   <build>
@@ -71,7 +99,11 @@
         <extensions>true</extensions>
 
         <configuration>
-          <excludeDependencies>false</excludeDependencies>
+          <instructions>
+            <Export-Package>com.fasterxml.jackson.*,org.apache.http*,org.ietf.jgss,net.spy.memcached,net.sf.ehcache</Export-Package>
+            <Embed-Dependency>com.fasterxml.jackson.*,org.apache.http*,org.ietf.jgss,net.spy.memcached,net.sf.ehcache;scope=compile|runtime</Embed-Dependency>
+            <Embed-Directory>target/dependency</Embed-Directory>
+          </instructions>
         </configuration>
       </plugin>
       <plugin>
@@ -79,8 +111,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>2.3.2</version>
         <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
+          <source>8</source>
+          <target>8</target>
         </configuration>
       </plugin>
       <plugin>
@@ -105,7 +137,7 @@
               <excludeArtifactIds></excludeArtifactIds>
               
               <!-- Specify the group ids to be excluded in the dependencies -->
-              <excludeGroupIds>com.sap.cloud.adk,org.apache.camel,org.slf4j,log4j</excludeGroupIds>
+              <excludeGroupIds>com.sap.cloud.adk,org.apache.camel,org.slf4j,log4j,com.sap.it.public,com.fasterxml.jackson.core,org.apache.httpcomponents</excludeGroupIds>
             </configuration>
           </execution>
         </executions>
