--- a/pom.xml
+++ b/pom.xml
@@ -1,202 +1,209 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>asutosh.google</groupId>
-  <artifactId>asutosh.drive</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <packaging>bundle</packaging>
-  <name>${project.groupId}.${project.artifactId}</name>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>asutosh.google</groupId>
+    <artifactId>asutosh.drive</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>bundle</packaging>
+    <name>${project.groupId}.${project.artifactId}</name>
 
-  <properties>
-    <camel.version>2.24.2</camel.version>
-  	<!-- Check for the latest version of this artifact in central maven repository -->
-    <adk.version>1.38.0</adk.version>
-  </properties>
+    <properties>
+        <camel.version>2.24.2</camel.version>
+        <!-- Check for the latest version of this artifact in central maven repository -->
+        <adk.version>1.38.0</adk.version>
+    </properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>com.sap.cloud.adk</groupId>
-      <artifactId>com.sap.cloud.adk.build.archive</artifactId>  
-      <version>${adk.version}</version>    
-    </dependency>
-    <dependency>
-      <groupId>org.apache.camel</groupId>
-      <artifactId>camel-core</artifactId>
-      <version>${camel.version}</version>
-    </dependency>
+    <dependencies>
+        <dependency>
+            <groupId>com.sap.cloud.adk</groupId>
+            <artifactId>com.sap.cloud.adk.build.archive</artifactId>
+            <version>${adk.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-core</artifactId>
+            <version>${camel.version}</version>
+        </dependency>
 
-    <!-- testing -->
-    <dependency>
-      <groupId>org.apache.camel</groupId>
-      <artifactId>camel-test</artifactId>
-      <version>${camel.version}</version>
-      <scope>test</scope>
-    </dependency>
+        <!-- testing -->
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-test</artifactId>
+            <version>${camel.version}</version>
+            <scope>test</scope>
+        </dependency>
 
-    <!-- logging -->
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>1.6.1</version>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-log4j12</artifactId>
-      <version>1.6.1</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <version>1.2.16</version>
-      <scope>test</scope>
-    </dependency>
-    <!-- https://mvnrepository.com/artifact/com.sap.cloud.adk/generic.api -->
-    <dependency>
-      <groupId>com.sap.cloud.adk</groupId>
-      <artifactId>generic.api</artifactId>
-      <version>3.12.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.httpcomponents</groupId>
-      <artifactId>httpclient-osgi</artifactId>
-      <version>[4.5,)</version>
-    </dependency>
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-core</artifactId>
-      <version>[2.12,)</version> <!-- Use the latest version available -->
-    </dependency>
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-databind</artifactId>
-      <version>[2.12,)</version> <!-- Use the latest version available -->
-    </dependency>
-    <dependency>
-      <groupId>com.sap.it.public</groupId>
-      <artifactId>generic.api</artifactId>
-      <version>2.25.0</version>
-      <scope>system</scope>
-      <systemPath>${project.basedir}/src/main/resources/com.sap.it.public.generic.api-2.25.0.jar</systemPath>
-    </dependency>
-    <dependency>
-      <groupId>com.sap.it.public</groupId>
-      <artifactId>adapter.api</artifactId>
-      <version>2.25.0</version>
-      <scope>system</scope>
-      <systemPath>${project.basedir}/src/main/resources/com.sap.it.public.adapter.api-2.25.0.jar</systemPath>
-    </dependency>
-  </dependencies>
+        <!-- logging -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.6.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.6.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.16</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.sap.cloud.adk/generic.api -->
+        <dependency>
+            <groupId>com.sap.cloud.adk</groupId>
+            <artifactId>generic.api</artifactId>
+            <version>3.12.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient-osgi</artifactId>
+            <version>[4.5,)</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>[2.12,)</version> <!-- Use the latest version available -->
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>[2.12,)</version> <!-- Use the latest version available -->
+        </dependency>
+        <dependency>
+            <groupId>com.sap.it.public</groupId>
+            <artifactId>generic.api</artifactId>
+            <version>2.25.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/resources/com.sap.it.public.generic.api-2.25.0.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>com.sap.it.public</groupId>
+            <artifactId>adapter.api</artifactId>
+            <version>2.25.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/resources/com.sap.it.public.adapter.api-2.25.0.jar</systemPath>
+        </dependency>
+    </dependencies>
 
-  <build>
-    <defaultGoal>install</defaultGoal>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.felix</groupId>
-        <artifactId>maven-bundle-plugin</artifactId>
-        <version>2.4.0</version>
-        <extensions>true</extensions>
+    <build>
+        <defaultGoal>install</defaultGoal>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <version>2.4.0</version>
+                <extensions>true</extensions>
 
-        <configuration>
-          <instructions>
-            <Export-Package>com.fasterxml.jackson.*,org.apache.http*,org.ietf.jgss,net.spy.memcached,net.sf.ehcache</Export-Package>
-            <Embed-Dependency>com.fasterxml.jackson.*,org.apache.http*,org.ietf.jgss,net.spy.memcached,net.sf.ehcache;scope=compile|runtime</Embed-Dependency>
-            <Embed-Directory>target/dependency</Embed-Directory>
-          </instructions>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.3.2</version>
-        <configuration>
-          <source>8</source>
-          <target>8</target>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-dependency-plugin</artifactId>
-        <version>2.10</version>
-        <executions>
-          <execution>
-            <id>copy-dependencies</id>
-            <phase>package</phase>
-            <goals>
-              <goal>copy-dependencies</goal>
-            </goals>
-            <configuration>
-              <outputDirectory>${project.build.directory}/libs</outputDirectory>
-              <overWriteReleases>false</overWriteReleases>
-              <overWriteSnapshots>false</overWriteSnapshots>
-              <overWriteIfNewer>true</overWriteIfNewer>
-              <excludeTransitive>true</excludeTransitive>
-              
-              <!-- Specify the artifacts to be excluded in the dependencies -->
-              <excludeArtifactIds></excludeArtifactIds>
-              
-              <!-- Specify the group ids to be excluded in the dependencies -->
-              <excludeGroupIds>com.sap.cloud.adk,org.apache.camel,org.slf4j,log4j,com.sap.it.public,com.fasterxml.jackson.core,org.apache.httpcomponents</excludeGroupIds>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>com.sap.cloud.adk</groupId>
-        <artifactId>com.sap.cloud.adk.build.archive</artifactId>
-        <version>${adk.version}</version>    
-      </plugin>
-    </plugins>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>com.sap.cloud.adk</groupId>
-          <artifactId>com.sap.cloud.adk.build.archive</artifactId> 
-          <executions>
-            <execution>
-              <id>execute-checks</id>
-              <phase>package</phase>
-              <goals>
-                <goal>check</goal>
-              </goals>
-              <configuration>
-                <adapterProjectDirectory>${project.basedir}</adapterProjectDirectory>
-              </configuration>
-            </execution>
-            <execution>
-              <id>build-adapter</id>
-              <phase>install</phase>
-              <goals>
-                <goal>build</goal>
-              </goals>
-              <configuration>
-                <adapterProjectDirectory>${project.basedir}</adapterProjectDirectory>
-              </configuration>
-            </execution>
-          </executions>
-        </plugin>
-        <plugin>
-          <artifactId>maven-javadoc-plugin</artifactId>
-          <executions>
-            <execution>
-              <id>javadoc-jar</id>
-              <phase>generate-sources</phase>
-              <goals>
-                <goal>jar</goal>
-              </goals>
-            </execution>
-            <execution>
-              <id>aggregate-jar</id>
-              <phase>generate-sources</phase>
-              <goals>
-                <goal>aggregate-jar</goal>
-              </goals>
-              <inherited>false</inherited>
-            </execution>
-          </executions>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-  </build>
+                <configuration>
+                    <instructions>
+                        <Export-Package>
+                            com.fasterxml.jackson.*,org.apache.http*,org.ietf.jgss,net.spy.memcached,net.sf.ehcache
+                        </Export-Package>
+                        <Embed-Dependency>
+                            com.fasterxml.jackson.*,org.apache.http*,org.ietf.jgss,net.spy.memcached,net.sf.ehcache;scope=compile|runtime
+                        </Embed-Dependency>
+                        <Embed-Directory>target/dependency</Embed-Directory>
+                    </instructions>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.10</version>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/libs</outputDirectory>
+                            <overWriteReleases>false</overWriteReleases>
+                            <overWriteSnapshots>false</overWriteSnapshots>
+                            <overWriteIfNewer>true</overWriteIfNewer>
+                            <excludeTransitive>true</excludeTransitive>
+
+                            <!-- Specify the artifacts to be excluded in the dependencies -->
+                            <excludeArtifactIds></excludeArtifactIds>
+
+                            <!-- Specify the group ids to be excluded in the dependencies -->
+                            <excludeGroupIds>
+                                com.sap.cloud.adk,org.apache.camel,org.slf4j,log4j,com.sap.it.public,com.fasterxml.jackson.core,org.apache.httpcomponents
+                            </excludeGroupIds>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>com.sap.cloud.adk</groupId>
+                <artifactId>com.sap.cloud.adk.build.archive</artifactId>
+                <version>${adk.version}</version>
+            </plugin>
+        </plugins>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>com.sap.cloud.adk</groupId>
+                    <artifactId>com.sap.cloud.adk.build.archive</artifactId>
+                    <executions>
+                        <execution>
+                            <id>execute-checks</id>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>check</goal>
+                            </goals>
+                            <configuration>
+                                <adapterProjectDirectory>${project.basedir}</adapterProjectDirectory>
+                            </configuration>
+                        </execution>
+                        <execution>
+                            <id>build-adapter</id>
+                            <phase>install</phase>
+                            <goals>
+                                <goal>build</goal>
+                            </goals>
+                            <configuration>
+                                <adapterProjectDirectory>${project.basedir}</adapterProjectDirectory>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-javadoc-plugin</artifactId>
+                    <executions>
+                        <execution>
+                            <id>javadoc-jar</id>
+                            <phase>generate-sources</phase>
+                            <goals>
+                                <goal>jar</goal>
+                            </goals>
+                        </execution>
+                        <execution>
+                            <id>aggregate-jar</id>
+                            <phase>generate-sources</phase>
+                            <goals>
+                                <goal>aggregate-jar</goal>
+                            </goals>
+                            <inherited>false</inherited>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 </project>
